test/semantics/programs/valid/class-args-match-params.guav
# Should pass since class instantiation arguments match class constructor function parameters

class Person {
    constructor(name = "John Doe", height = 50.0, vocabulary = []) {
        this.name = name
        this.height = height
        this.vocabulary = vocabulary
    }
}

littleGreenMan = Person("Yoda", 0.0001, ["Amazing", "Guavascript", "is!"])

print(littleGreenMan)
